[tool.poetry]
name = "opentele"
version = "1.0.0"
description = ""
authors = ["3hx <code@3hx.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
PyQt5-Qt5 = "5.15.2"
telethon = "1.33.0"
tgcrypto = "1.2.5"
pyqt5 = "^5.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
